<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/ic_lupa"
        android:title="@string/search"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/cart"
        android:enabled="true"
        android:icon="@drawable/ic_sacola"
        android:title="@string/cart"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_user"
        android:title="@string/profile"
        android:visible="true"
        app:showAsAction="ifRoom" />
</menu>