<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="br.com.tarcisiofl.shoestore.ui.login.LoginFragment"
        android:label="@string/login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="br.com.tarcisiofl.shoestore.ui.welcome.WelcomeFragment"
        android:label="@string/welcome" >
        <action
            android:id="@+id/action_welcomeFragment_to_instructionFragment"
            app:destination="@id/instructionFragment" />
        <action
            android:id="@+id/action_welcomeFragment_to_productListFragment"
            app:destination="@id/productListFragment" />
    </fragment>
    <fragment
        android:id="@+id/instructionFragment"
        android:name="br.com.tarcisiofl.shoestore.ui.instruction.InstructionFragment"
        android:label="@string/instructions" >
        <action
            android:id="@+id/action_instructionFragment_to_productListFragment"
            app:destination="@id/productListFragment"
            app:popUpTo="@id/instructionFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/productListFragment"
        android:name="br.com.tarcisiofl.shoestore.ui.products.ProductListFragment"
        android:label="@string/product_list" />
</navigation>