<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="productViewModel"
            type="br.com.tarcisiofl.shoestore.ui.products.ProductViewModel" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/email_card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/compose_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/grid_2">

            <TextView
                android:id="@+id/header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_shoe"
                android:textAppearance="?attr/textAppearanceHeadline4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/shoe_name_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/grid_2"
                android:layout_marginTop="@dimen/small_margin"
                android:background="@android:color/transparent"
                android:hint="@string/shoe_name"
                android:minHeight="@dimen/min_touch_target_size"
                android:paddingVertical="@dimen/grid_1"
                android:text="@={productViewModel.productItem.name}"
                android:textAppearance="?attr/textAppearanceHeadline5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header_text" />

            <ImageView
                android:id="@+id/subject_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/grid_2"
                android:layout_marginTop="@dimen/grid_1"
                android:background="@drawable/divider"
                app:backgroundTint="@color/color_on_surface_divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoe_name_edit_text" />

            <EditText
                android:id="@+id/brand_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/grid_2"
                android:background="@android:color/transparent"
                android:hint="@string/brand_name"
                android:minHeight="@dimen/min_touch_target_size"
                android:paddingVertical="@dimen/grid_1"
                android:text="@={productViewModel.productItem.company}"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subject_divider" />

            <ImageView
                android:id="@+id/sender_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/grid_2"
                android:layout_marginTop="@dimen/grid_0_5"
                android:background="@drawable/divider"
                app:backgroundTint="@color/color_on_surface_divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/brand_edit_text" />

            <EditText
                android:id="@+id/size_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/grid_2"
                android:background="@android:color/transparent"
                android:hint="@string/size_label"
                android:inputType="number"
                android:minHeight="@dimen/min_touch_target_size"
                android:paddingVertical="@dimen/grid_1"
                android:text="@={productViewModel.productItem.size}"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sender_divider" />

            <ImageView
                android:id="@+id/recipient_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/grid_2"
                android:layout_marginTop="@dimen/grid_1"
                android:background="@drawable/divider"
                app:backgroundTint="@color/color_on_surface_divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/size_edit_text" />

            <EditText
                android:id="@+id/body_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/grid_2"
                android:layout_marginTop="@dimen/grid_2"
                android:background="@android:color/transparent"
                android:gravity="top"
                android:hint="@string/product_description_label"
                android:minHeight="250dp"
                android:paddingBottom="@dimen/grid_4"
                android:text="@={productViewModel.productItem.description}"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recipient_divider"
                app:lineHeight="24sp" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> productViewModel.saveProduct()}"
                android:text="@string/save_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cancel_button"
                app:layout_constraintTop_toBottomOf="@+id/body_text_view" />

            <Button
                android:id="@+id/cancel_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_text"
                app:layout_constraintBaseline_toBaselineOf="@+id/save_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/save_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>